--- a/test_C2.ipynb
+++ b/test_C2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5800b604",
+   "id": "eafff7b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "from custom_lbfgs import *\n",
     "from SSAutil import *\n",
     "from neuralnetwork import NeuralNetwork, MinmaxScaleLayer, UpScaleLayer\n",
-    "from SSA_equations.SSANN import SSANN_invertC\n",
+    "from SSA_equations.SSANN import SSANN_calvingfront\n",
     "from logger import Logger\n",
     "from plotting import *\n",
     "import matplotlib.pyplot as plt"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9033a40d",
+   "id": "734a49a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,8 @@
     "repoPath = \"./\"\n",
     "appDataPath = os.path.join(repoPath, \"matlab_SSA\", \"DATA\")\n",
     "# path = os.path.join(appDataPath, \"SSA2D_nocalving.mat\")\n",
-    "path = os.path.join(appDataPath, \"SSA2D_seg_nocalving.mat\")\n",
+    "# path = os.path.join(appDataPath, \"SSA2D_seg_nocalving.mat\")\n",
+    "path = os.path.join(appDataPath, \"SSA2D_segCF.mat\")\n",
     "modelPath = \"./Models/test\"\n",
     "reloadModel = False # reload from previous training\n",
     "#}}}"
@@ -69,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66e3eae3",
+   "id": "30d5ad86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,13 +79,13 @@
     "\n",
     "# Creating the model and training\n",
     "logger = Logger(hp)\n",
-    "pinn = SSANN_invertC(hp, logger, X_f, \n",
+    "pinn = SSANN_calvingfront(hp, logger, X_f, \n",
     "        X_bc, u_bc,\n",
     "        X_cf, n_cf,\n",
     "        xub, xlb, uub, ulb, \n",
     "        modelPath, reloadModel,\n",
     "        mu=1.1060e8,\n",
-    "        loss_weights=[1e-2, 1e-3, 1e-2, 1e-4])\n",
+    "        loss_weights=[1e-2, 1e-3, 1e-2, 1e-4, 1e-4])\n",
     "\n",
     "X_u = pinn.tensor(X_u_train)\n",
     "u = pinn.tensor(u_train)\n",
@@ -97,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe92ebc6",
+   "id": "c9f372c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,11 +112,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae41253c",
+   "id": "467c9c07",
    "metadata": {},
    "outputs": [],
    "source": [
     "# plot\n",
+    "#plot_Helheim(pinn, X_f, X_u_train, u_train, xlb, xub)\n",
     "plot_Helheim_all(pinn, X_f, X_star, u_star, xlb, xub)\n",
     "\n",
     "# history\n",
