save for the test 1D transient

--- a/testTransient.ipynb
+++ b/testTransient.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3e9989b9",
+   "id": "c2f1ae3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5b13d3f9",
+   "id": "ff3e5184",
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochADAM = 100000\n",
-    "epochLBFGS=0\n",
+    "epochADAM = 200000\n",
+    "epochLBFGS = 100000\n",
     "N_u=500\n",
     "N_f=1000\n",
     "seed=1234\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "60ab88b5",
+   "id": "6af45ed9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "70a12bd3",
+   "id": "4dfacfdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "05b810d9",
+   "id": "3b0fa3a2",
    "metadata": {},
    "outputs": [
     {
@@ -152,11 +152,11 @@
       "    10,\n",
       "    1\n",
       "  ],\n",
-      "  \"tf_epochs\": 100000,\n",
+      "  \"tf_epochs\": 200000,\n",
       "  \"tf_lr\": 0.001,\n",
       "  \"tf_b1\": 0.99,\n",
       "  \"tf_eps\": 0.1,\n",
-      "  \"nt_epochs\": 0,\n",
+      "  \"nt_epochs\": 100000,\n",
       "  \"log_frequency\": 10000,\n",
       "  \"save_history\": true,\n",
       "  \"history_frequency\": 10\n",
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a7e39367",
+   "id": "17cc11e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d10eba01",
+   "id": "97ce5411",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,29 @@
       "_________________________________________________________________\n",
       "(None, None, None, None)\n",
       "[1.e-05 1.e-03 1.e-05 1.e-08 1.e-01 1.e-14]\n",
-      "-- Starting Adam optimization --\n"
+      "-- Starting Adam optimization --\n",
+      "tf_epoch =      0  elapsed = 00:13 (+13.4)  loss = 1.2584e+05  \n",
+      "tf_epoch =  10000  elapsed = 02:30 (+17.0)  loss = 2.6118e+01  \n",
+      "tf_epoch =  20000  elapsed = 04:46 (+15.5)  loss = 7.9685e+00  \n",
+      "tf_epoch =  30000  elapsed = 07:00 (+13.9)  loss = 6.0095e+00  \n",
+      "tf_epoch =  40000  elapsed = 09:13 (+13.4)  loss = 4.1897e+00  \n",
+      "tf_epoch =  50000  elapsed = 11:26 (+13.4)  loss = 1.4536e+01  \n",
+      "tf_epoch =  60000  elapsed = 13:40 (+13.7)  loss = 3.7844e+00  \n",
+      "tf_epoch =  70000  elapsed = 15:54 (+13.6)  loss = 3.7009e+00  \n",
+      "tf_epoch =  80000  elapsed = 18:08 (+14.4)  loss = 3.6190e+00  \n",
+      "tf_epoch =  90000  elapsed = 20:22 (+13.8)  loss = 3.5702e+00  \n",
+      "tf_epoch = 100000  elapsed = 22:35 (+13.5)  loss = 3.5103e+00  \n",
+      "tf_epoch = 110000  elapsed = 24:49 (+13.8)  loss = 3.4811e+00  \n",
+      "tf_epoch = 120000  elapsed = 27:04 (+14.5)  loss = 3.4522e+00  \n",
+      "tf_epoch = 130000  elapsed = 29:18 (+14.3)  loss = 3.4202e+00  \n",
+      "tf_epoch = 140000  elapsed = 31:32 (+13.8)  loss = 3.3765e+00  \n",
+      "tf_epoch = 150000  elapsed = 33:49 (+16.6)  loss = 3.3735e+00  \n",
+      "tf_epoch = 160000  elapsed = 36:03 (+13.8)  loss = 3.1788e+01  \n",
+      "tf_epoch = 170000  elapsed = 38:17 (+13.8)  loss = 1.3788e+01  \n",
+      "tf_epoch = 180000  elapsed = 40:32 (+15.1)  loss = 6.2461e+00  \n",
+      "tf_epoch = 190000  elapsed = 42:45 (+13.5)  loss = 4.5832e+00  \n",
+      "-- Starting tfp-L-BFGS optimization --\n",
+      "nt_epoch =  10000  elapsed = 48:52 (+07.2)  loss = 3.6492e+00  \n"
      ]
     }
    ],
@@ -324,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20371345",
+   "id": "53cce44d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -332,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7cb28b8",
+   "id": "f5842d62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87bddc12",
+   "id": "856cf9be",
    "metadata": {},
    "outputs": [],
    "source": []
