just save the test

--- a/testfrictionNN_uvsH_2D.ipynb
+++ b/testfrictionNN_uvsH_2D.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c64e7dca",
+   "id": "656acef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5dfa48ea",
+   "id": "c7b3875b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "17c868da",
+   "id": "f988b925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +55,8 @@
     "hp[\"h_layers\"] = [2]+[NNeurons]*NLayers+[2]\n",
     "# DeepNN topology (1-sized input [x,y], NLayers hidden layer of NNeurons-width, 1-sized output [C]\n",
     "hp[\"C_layers\"] = [2]+[NNeurons]*NLayers+[1]\n",
-    "# DeepNN topology (1-sized input [x], NLayers hidden layer of NNeurons-width, 4-sized input [u,v,C], \n",
-    "#   1-sized output [taub]\n",
-    "hp[\"friction_layers\"] = [3]+[NNeurons]*NLayers+[1]\n",
+    "# DeepNN topology (1-sized input [x], NLayers hidden layer of NNeurons-width, 4-sized input [u,v,s,H], 1-sized output [taub]\n",
+    "hp[\"friction_layers\"] = [4]+[NNeurons]*NLayers+[1]\n",
     "# Setting up the TF SGD-based optimizer (set tf_epochs=0 to cancel it)\n",
     "hp[\"tf_epochs\"] = epochADAM\n",
     "hp[\"tf_lr\"] = 0.001\n",
@@ -83,9 +82,9 @@
     "    noiseLevel = [] # set to no noise\n",
     "\n",
     "if noiseLevel:\n",
-    "    modelPath = \"./Models/SSA2D_3NN_\"+str(NLayers)+\"x\"+str(NNeurons)+\"_noise_\" + \"\".join([str(i)+\"_\" for i in noiseLevel])+ \"weights\" + \"\".join([str(w)+\"_\" for w in weights]) + now.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "    modelPath = \"./Models/SSA2D__frictionuvsH_3NN_\"+str(NLayers)+\"x\"+str(NNeurons)+\"_noise_\" + \"\".join([str(i)+\"_\" for i in noiseLevel])+ \"weights\" + \"\".join([str(w)+\"_\" for w in weights]) + now.strftime(\"%Y%m%d_%H%M%S\")\n",
     "else:\n",
-    "    modelPath = \"./Models/SSA2D_3NN_\"+str(NLayers)+\"x\"+str(NNeurons)+\"_weights\"+ \"\".join([str(w)+\"_\" for w in weights]) + now.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "    modelPath = \"./Models/SSA2D__frictionuvsH_3NN_\"+str(NLayers)+\"x\"+str(NNeurons)+\"_weights\"+ \"\".join([str(w)+\"_\" for w in weights]) + now.strftime(\"%Y%m%d_%H%M%S\")\n",
     "\n",
     "modelPath += (\"_seed_\" + str(seed) if seed else \"\")\n",
     "# + \"ADAM\"+str(hp[\"tf_epochs\"]) +\"_BFGS\"+str(hp[\"nt_epochs\"])\n",
@@ -95,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b6a6a0da",
+   "id": "b22019a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "edbf9ffc",
+   "id": "95b3876c",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +146,7 @@
       "    1\n",
       "  ],\n",
       "  \"friction_layers\": [\n",
-      "    3,\n",
+      "    4,\n",
       "    10,\n",
       "    10,\n",
       "    10,\n",
@@ -174,7 +173,7 @@
    ],
    "source": [
     "logger = Logger(hp)\n",
-    "pinn = SSA2D_frictionNN(hp, logger, X_f,\n",
+    "pinn = SSA2D_frictionNN_uvsH(hp, logger, X_f,\n",
     "        X_bc, u_bc,\n",
     "        X_cf, n_cf,\n",
     "        xub, xlb, uub, ulb,\n",
@@ -186,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9e153fda",
+   "id": "868abff2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "474c073f",
+   "id": "920e2f2a",
    "metadata": {},
    "outputs": [
     {
@@ -293,9 +292,9 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "minmax_scale_layer_3 (Minmax (None, 3)                 8         \n",
+      "minmax_scale_layer_3 (Minmax (None, 4)                 10        \n",
       "_________________________________________________________________\n",
-      "dense_21 (Dense)             (None, 10)                40        \n",
+      "dense_21 (Dense)             (None, 10)                50        \n",
       "_________________________________________________________________\n",
       "dense_22 (Dense)             (None, 10)                110       \n",
       "_________________________________________________________________\n",
@@ -311,27 +310,14 @@
       "_________________________________________________________________\n",
       "up_scale_layer_3 (UpScaleLay (None, 1)                 4         \n",
       "=================================================================\n",
-      "Total params: 613\n",
-      "Trainable params: 601\n",
-      "Non-trainable params: 12\n",
+      "Total params: 625\n",
+      "Trainable params: 611\n",
+      "Non-trainable params: 14\n",
       "_________________________________________________________________\n",
       "(None, None, None, None)\n",
       "[1.e-05 1.e-03 1.e-05 1.e-08 1.e-14]\n",
       "-- Starting Adam optimization --\n",
-      "tf_epoch =      0  elapsed = 00:21 (+21.5)  loss = 3.9141e+04  \n",
-      "tf_epoch =  10000  elapsed = 06:45 (+24.2)  loss = 4.5797e+01  \n",
-      "tf_epoch =  20000  elapsed = 13:09 (+23.9)  loss = 1.9884e+01  \n",
-      "tf_epoch =  30000  elapsed = 19:31 (+21.5)  loss = 1.5378e+01  \n",
-      "tf_epoch =  40000  elapsed = 25:53 (+22.1)  loss = 1.3508e+01  \n",
-      "tf_epoch =  50000  elapsed = 32:14 (+20.6)  loss = 1.2417e+01  \n",
-      "tf_epoch =  60000  elapsed = 38:35 (+21.0)  loss = 1.1645e+01  \n",
-      "tf_epoch =  70000  elapsed = 44:55 (+20.2)  loss = 1.0972e+01  \n",
-      "tf_epoch =  80000  elapsed = 51:16 (+21.2)  loss = 1.0303e+01  \n",
-      "tf_epoch =  90000  elapsed = 57:37 (+21.1)  loss = 9.7968e+00  \n",
-      "tf_epoch = 100000  elapsed = 03:58 (+21.1)  loss = 9.3776e+00  \n",
-      "tf_epoch = 110000  elapsed = 10:20 (+21.9)  loss = 9.0637e+00  \n",
-      "tf_epoch = 120000  elapsed = 16:41 (+20.6)  loss = 8.7677e+00  \n",
-      "tf_epoch = 130000  elapsed = 23:05 (+24.2)  loss = 8.4710e+00  \n"
+      "tf_epoch =      0  elapsed = 00:19 (+19.7)  loss = 9.1394e+04  \n"
      ]
     }
    ],
@@ -342,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46317abd",
+   "id": "fe497061",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6cfef0a",
+   "id": "f274fc0a",
    "metadata": {},
    "outputs": [],
    "source": []
