save the experiments

--- a/testfrictionNN2D.ipynb
+++ b/testfrictionNN2D.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c64e7dca",
+   "id": "84599fa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5dfa48ea",
+   "id": "81c21710",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "17c868da",
+   "id": "ef23e094",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b6a6a0da",
+   "id": "01995c5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "edbf9ffc",
+   "id": "f0a06a27",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9e153fda",
+   "id": "644baf5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "474c073f",
+   "id": "d16baaa1",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,12 @@
       "tf_epoch = 100000  elapsed = 03:58 (+21.1)  loss = 9.3776e+00  \n",
       "tf_epoch = 110000  elapsed = 10:20 (+21.9)  loss = 9.0637e+00  \n",
       "tf_epoch = 120000  elapsed = 16:41 (+20.6)  loss = 8.7677e+00  \n",
-      "tf_epoch = 130000  elapsed = 23:05 (+24.2)  loss = 8.4710e+00  \n"
+      "tf_epoch = 130000  elapsed = 23:05 (+24.2)  loss = 8.4710e+00  \n",
+      "tf_epoch = 140000  elapsed = 29:26 (+20.9)  loss = 8.2875e+00  \n",
+      "tf_epoch = 150000  elapsed = 35:51 (+24.7)  loss = 8.0965e+00  \n",
+      "tf_epoch = 160000  elapsed = 42:11 (+20.0)  loss = 8.0069e+00  \n",
+      "tf_epoch = 170000  elapsed = 48:33 (+21.6)  loss = 7.8594e+00  \n",
+      "tf_epoch = 180000  elapsed = 54:54 (+21.2)  loss = 7.7215e+00  \n"
      ]
     }
    ],
@@ -342,13 +347,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46317abd",
+   "id": "d3932c18",
    "metadata": {},
    "outputs": [],
    "source": [
     "pinn.save()\n",
     "# plot\n",
-    "plot_2D_solutions_all(pinn, X_f, X_star, u_star, xlb, xub, savePath=modelPath)\n",
+    "plot_2D_solutions_all(pinn, X_f, X_star, u_star, xlb, xub, \n",
+    "                      vranges={'u - u obs': [-1e3,1e3], 'v - v obs': [-1e3,1e3], \n",
+    "                               'h - h obs': [-1e2,1e2], 'H - H obs': [-1e2,1e2], \n",
+    "                               'C - C obs': [-1e3,1e3]}, savePath=modelPath)\n",
     "# history\n",
     "plot_log_history(pinn, modelPath)"
    ]
@@ -356,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6cfef0a",
+   "id": "ece35331",
    "metadata": {},
    "outputs": [],
    "source": []
