--- a/testfrictionNN_uvsH_2D_2.ipynb
+++ b/testfrictionNN_uvsH_2D_2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d6de3b43",
+   "id": "53e25dd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "13102070",
+   "id": "3f620027",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +34,13 @@
     "NLayers=6\n",
     "NNeurons=10\n",
     "noiseLevel=[]\n",
-    "weights = [5,3,5,8,14]"
+    "weights = [5,3,5,10,16]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3dc2b76b",
+   "id": "793eea11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a3971a15",
+   "id": "d31e013a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "827f0de3",
+   "id": "627c0145",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6b5c04f1",
+   "id": "7fe1c131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "280aca32",
+   "id": "2444589a",
    "metadata": {},
    "outputs": [
     {
@@ -315,9 +315,46 @@
       "Non-trainable params: 14\n",
       "_________________________________________________________________\n",
       "(None, None, None, None)\n",
-      "[1.e-05 1.e-03 1.e-05 1.e-08 1.e-14]\n",
+      "[1.e-05 1.e-03 1.e-05 1.e-10 1.e-16]\n",
       "-- Starting Adam optimization --\n",
-      "tf_epoch =      0  elapsed = 00:18 (+18.7)  loss = 1.3691e+05  \n"
+      "tf_epoch =      0  elapsed = 00:19 (+19.1)  loss = 8.0327e+03  \n",
+      "tf_epoch =  10000  elapsed = 05:48 (+29.2)  loss = 1.1456e+01  \n",
+      "tf_epoch =  20000  elapsed = 11:16 (+28.2)  loss = 2.9489e+00  \n",
+      "tf_epoch =  30000  elapsed = 16:46 (+29.9)  loss = 2.2321e+00  \n",
+      "tf_epoch =  40000  elapsed = 22:16 (+29.7)  loss = 1.9100e+00  \n",
+      "tf_epoch =  50000  elapsed = 27:45 (+29.4)  loss = 1.7358e+00  \n",
+      "tf_epoch =  60000  elapsed = 33:14 (+29.3)  loss = 1.6133e+00  \n",
+      "tf_epoch =  70000  elapsed = 38:45 (+30.8)  loss = 1.5221e+00  \n",
+      "tf_epoch =  80000  elapsed = 44:14 (+28.2)  loss = 1.4518e+00  \n",
+      "tf_epoch =  90000  elapsed = 49:42 (+27.9)  loss = 1.3964e+00  \n",
+      "tf_epoch = 100000  elapsed = 55:09 (+27.9)  loss = 1.3501e+00  \n",
+      "tf_epoch = 110000  elapsed = 00:38 (+28.7)  loss = 1.3140e+00  \n",
+      "tf_epoch = 120000  elapsed = 06:06 (+27.3)  loss = 1.2815e+00  \n",
+      "tf_epoch = 130000  elapsed = 11:35 (+29.2)  loss = 1.2529e+00  \n",
+      "tf_epoch = 140000  elapsed = 17:03 (+28.6)  loss = 1.2271e+00  \n",
+      "tf_epoch = 150000  elapsed = 22:32 (+28.7)  loss = 1.2045e+00  \n",
+      "tf_epoch = 160000  elapsed = 28:01 (+28.9)  loss = 1.1853e+00  \n",
+      "tf_epoch = 170000  elapsed = 33:29 (+27.7)  loss = 1.1656e+00  \n",
+      "tf_epoch = 180000  elapsed = 38:57 (+28.1)  loss = 1.1472e+00  \n",
+      "tf_epoch = 190000  elapsed = 44:25 (+28.3)  loss = 1.1286e+00  \n",
+      "tf_epoch = 200000  elapsed = 49:55 (+29.4)  loss = 1.1097e+00  \n",
+      "tf_epoch = 210000  elapsed = 55:26 (+30.9)  loss = 1.0929e+00  \n",
+      "tf_epoch = 220000  elapsed = 00:56 (+30.1)  loss = 1.0909e+00  \n",
+      "tf_epoch = 230000  elapsed = 06:24 (+27.5)  loss = 1.0674e+00  \n",
+      "tf_epoch = 240000  elapsed = 11:52 (+28.7)  loss = 1.0561e+00  \n",
+      "tf_epoch = 250000  elapsed = 17:21 (+28.9)  loss = 1.0458e+00  \n",
+      "tf_epoch = 260000  elapsed = 22:50 (+28.2)  loss = 1.0376e+00  \n",
+      "tf_epoch = 270000  elapsed = 28:18 (+28.2)  loss = 1.0285e+00  \n",
+      "tf_epoch = 280000  elapsed = 33:46 (+28.6)  loss = 1.0208e+00  \n",
+      "tf_epoch = 290000  elapsed = 39:16 (+29.5)  loss = 1.0127e+00  \n",
+      "tf_epoch = 300000  elapsed = 44:43 (+27.3)  loss = 1.0068e+00  \n",
+      "tf_epoch = 310000  elapsed = 50:12 (+28.7)  loss = 9.9725e-01  \n",
+      "tf_epoch = 320000  elapsed = 55:43 (+31.0)  loss = 9.8991e-01  \n",
+      "tf_epoch = 330000  elapsed = 01:11 (+27.4)  loss = 9.8305e-01  \n",
+      "tf_epoch = 340000  elapsed = 06:41 (+30.5)  loss = 9.7700e-01  \n",
+      "tf_epoch = 350000  elapsed = 12:13 (+31.3)  loss = 9.7149e-01  \n",
+      "tf_epoch = 360000  elapsed = 17:45 (+32.7)  loss = 9.6628e-01  \n",
+      "tf_epoch = 370000  elapsed = 23:16 (+30.3)  loss = 9.6204e-01  \n"
      ]
     }
    ],
@@ -328,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39cd3833",
+   "id": "322051b9",
    "metadata": {},
    "outputs": [],
    "source": [
