generate flight tracks with bedmachine H in the same figure for EGU poster only

--- a/generate1DFigures.ipynb
+++ b/generate1DFigures.ipynb
@@ -12,14 +12,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-02 16:44:52.676608: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2024-01-31 00:57:28.005299: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-02 16:44:52.852677: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-01-02 16:44:52.857284: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /totten_1/chenggong/trunk-jpl/externalpackages/proj/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/netcdf/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/petsc/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/hdf5/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/gdal/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/triangle/install/lib:/totten_1/chenggong/Elmer/install/lib:\n",
-      "2024-01-02 16:44:52.857298: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2024-01-02 16:44:53.519038: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /totten_1/chenggong/trunk-jpl/externalpackages/proj/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/netcdf/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/petsc/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/hdf5/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/gdal/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/triangle/install/lib:/totten_1/chenggong/Elmer/install/lib:\n",
-      "2024-01-02 16:44:53.519138: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /totten_1/chenggong/trunk-jpl/externalpackages/proj/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/netcdf/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/petsc/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/hdf5/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/gdal/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/triangle/install/lib:/totten_1/chenggong/Elmer/install/lib:\n",
-      "2024-01-02 16:44:53.519143: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2024-01-31 00:57:28.312868: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-01-31 00:57:28.374623: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /totten_1/chenggong/trunk-jpl/externalpackages/proj/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/netcdf/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/petsc/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/hdf5/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/gdal/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/triangle/install/lib:/totten_1/chenggong/Elmer/install/lib:\n",
+      "2024-01-31 00:57:28.374641: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2024-01-31 00:57:31.049300: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /totten_1/chenggong/trunk-jpl/externalpackages/proj/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/netcdf/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/petsc/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/hdf5/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/gdal/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/triangle/install/lib:/totten_1/chenggong/Elmer/install/lib:\n",
+      "2024-01-31 00:57:31.049431: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /totten_1/chenggong/trunk-jpl/externalpackages/proj/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/netcdf/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/petsc/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/hdf5/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/gdal/install/lib:/totten_1/chenggong/trunk-jpl/externalpackages/triangle/install/lib:/totten_1/chenggong/Elmer/install/lib:\n",
+      "2024-01-31 00:57:31.049439: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
@@ -38,18 +38,117 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> size before cleanup: (140, 15)\n",
-      "-> size after cleanup: (140, 15)\n",
-      "-> Keys before cleanup: ['SSA1D']\n",
-      "-> Keys after cleanup: ['SSA1D']\n",
+      "-> size before cleanup: (10685, 15)\n",
+      "-> size after cleanup: (10685, 15)\n",
+      "-> Keys before cleanup: ['SSA1D' 'SSA2D']\n",
+      "-> Keys after cleanup: ['SSA1D' 'SSA2D']\n",
       "-> Keys before cleanup:  0    []\n",
       "Name: noise, dtype: object\n",
       "-> Keys after cleanup: 0    []\n",
       "Name: noise, dtype: object\n",
-      "-> Keys before cleanup: ['SSA1D']\n",
+      "-> Keys before cleanup: ['SSA1D' 'SSA2D']\n",
       "-> Keys after cleanup: ['SSA1D']\n",
-      "Loop over the whole dataframe: 0/140\n",
-      "Loop over the whole dataframe: 100/140\n"
+      "Loop over the whole dataframe: 0/10062\n",
+      "Loop over the whole dataframe: 100/10062\n",
+      "Loop over the whole dataframe: 200/10062\n",
+      "Loop over the whole dataframe: 300/10062\n",
+      "Loop over the whole dataframe: 400/10062\n",
+      "Loop over the whole dataframe: 500/10062\n",
+      "Loop over the whole dataframe: 600/10062\n",
+      "Loop over the whole dataframe: 700/10062\n",
+      "Loop over the whole dataframe: 800/10062\n",
+      "Loop over the whole dataframe: 900/10062\n",
+      "Loop over the whole dataframe: 1000/10062\n",
+      "Loop over the whole dataframe: 1100/10062\n",
+      "Loop over the whole dataframe: 1200/10062\n",
+      "Loop over the whole dataframe: 1300/10062\n",
+      "Loop over the whole dataframe: 1400/10062\n",
+      "Loop over the whole dataframe: 1500/10062\n",
+      "Loop over the whole dataframe: 1600/10062\n",
+      "Loop over the whole dataframe: 1700/10062\n",
+      "Loop over the whole dataframe: 1800/10062\n",
+      "Loop over the whole dataframe: 1900/10062\n",
+      "Loop over the whole dataframe: 2000/10062\n",
+      "Loop over the whole dataframe: 2100/10062\n",
+      "Loop over the whole dataframe: 2200/10062\n",
+      "Loop over the whole dataframe: 2300/10062\n",
+      "Loop over the whole dataframe: 2400/10062\n",
+      "Loop over the whole dataframe: 2500/10062\n",
+      "Loop over the whole dataframe: 2600/10062\n",
+      "Loop over the whole dataframe: 2700/10062\n",
+      "Loop over the whole dataframe: 2800/10062\n",
+      "Loop over the whole dataframe: 2900/10062\n",
+      "Loop over the whole dataframe: 3000/10062\n",
+      "Loop over the whole dataframe: 3100/10062\n",
+      "Loop over the whole dataframe: 3200/10062\n",
+      "Loop over the whole dataframe: 3300/10062\n",
+      "Loop over the whole dataframe: 3400/10062\n",
+      "Loop over the whole dataframe: 3500/10062\n",
+      "Loop over the whole dataframe: 3600/10062\n",
+      "Loop over the whole dataframe: 3700/10062\n",
+      "Loop over the whole dataframe: 3800/10062\n",
+      "Loop over the whole dataframe: 3900/10062\n",
+      "Loop over the whole dataframe: 4000/10062\n",
+      "Loop over the whole dataframe: 4100/10062\n",
+      "Loop over the whole dataframe: 4200/10062\n",
+      "Loop over the whole dataframe: 4300/10062\n",
+      "Loop over the whole dataframe: 4400/10062\n",
+      "Loop over the whole dataframe: 4500/10062\n",
+      "Loop over the whole dataframe: 4600/10062\n",
+      "Loop over the whole dataframe: 4700/10062\n",
+      "Loop over the whole dataframe: 4800/10062\n",
+      "Loop over the whole dataframe: 4900/10062\n",
+      "Loop over the whole dataframe: 5000/10062\n",
+      "Loop over the whole dataframe: 5100/10062\n",
+      "Loop over the whole dataframe: 5200/10062\n",
+      "Loop over the whole dataframe: 5300/10062\n",
+      "Loop over the whole dataframe: 5400/10062\n",
+      "Loop over the whole dataframe: 5500/10062\n",
+      "Loop over the whole dataframe: 5600/10062\n",
+      "Loop over the whole dataframe: 5700/10062\n",
+      "Loop over the whole dataframe: 5800/10062\n",
+      "Loop over the whole dataframe: 5900/10062\n",
+      "Loop over the whole dataframe: 6000/10062\n",
+      "Loop over the whole dataframe: 6100/10062\n",
+      "Loop over the whole dataframe: 6200/10062\n",
+      "Loop over the whole dataframe: 6300/10062\n",
+      "Loop over the whole dataframe: 6400/10062\n",
+      "Loop over the whole dataframe: 6500/10062\n",
+      "Loop over the whole dataframe: 6600/10062\n",
+      "Loop over the whole dataframe: 6700/10062\n",
+      "Loop over the whole dataframe: 6800/10062\n",
+      "Loop over the whole dataframe: 6900/10062\n",
+      "Loop over the whole dataframe: 7000/10062\n",
+      "Loop over the whole dataframe: 7100/10062\n",
+      "Loop over the whole dataframe: 7200/10062\n",
+      "Loop over the whole dataframe: 7300/10062\n",
+      "Loop over the whole dataframe: 7400/10062\n",
+      "Loop over the whole dataframe: 7500/10062\n",
+      "Loop over the whole dataframe: 7600/10062\n",
+      "Loop over the whole dataframe: 7700/10062\n",
+      "Loop over the whole dataframe: 7800/10062\n",
+      "Loop over the whole dataframe: 7900/10062\n",
+      "Loop over the whole dataframe: 8000/10062\n",
+      "Loop over the whole dataframe: 8100/10062\n",
+      "Loop over the whole dataframe: 8200/10062\n",
+      "Loop over the whole dataframe: 8300/10062\n",
+      "Loop over the whole dataframe: 8400/10062\n",
+      "Loop over the whole dataframe: 8500/10062\n",
+      "Loop over the whole dataframe: 8600/10062\n",
+      "Loop over the whole dataframe: 8700/10062\n",
+      "Loop over the whole dataframe: 8800/10062\n",
+      "Loop over the whole dataframe: 8900/10062\n",
+      "Loop over the whole dataframe: 9000/10062\n",
+      "Loop over the whole dataframe: 9100/10062\n",
+      "Loop over the whole dataframe: 9200/10062\n",
+      "Loop over the whole dataframe: 9300/10062\n",
+      "Loop over the whole dataframe: 9400/10062\n",
+      "Loop over the whole dataframe: 9500/10062\n",
+      "Loop over the whole dataframe: 9600/10062\n",
+      "Loop over the whole dataframe: 9700/10062\n",
+      "Loop over the whole dataframe: 9800/10062\n",
+      "Loop over the whole dataframe: 9900/10062\n",
+      "Loop over the whole dataframe: 10000/10062\n"
      ]
     }
    ],
